# RestaurantReservationsAPI

./: .gitignore  README.md  pyproject.toml  run.py
app/: __init__.py  config.py  extensions.py
app/models/: customer.py  reservation.py  table.py
app/routes/: __init__.py  customer.py  reservation.py  table.py
app/templates/: index.html
